# python-gcp-bq-grid

./: .gitignore  README.md  pyproject.toml
data/sample/: basic.data.jsonl  basic.grid.yaml  invalid.grid.yaml
src/surquest/GCP/bq/grid/: __init__.py  field.py  grid.py
test/grid/: test__field.py  test__grid.py
